still having overflow issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 *{
     box-sizing: border-box;
     width: 100%;
+    overflow: hidden;
 }
 body {
     margin: 0;
@@ -12,9 +13,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     /* /* box-sizing: border-box; */
-    width: 100%; */
-    overflow: hidden;
-
+    width: 100%;    
 }
 
 .header {
